# scryn

./: README.md  pyproject.toml  setup.cfg  tox.ini
scryn/: model.py  scryn.py  strategy.py  task.py
tests/: test_scryn.py
tools/: run_cli.py  run_cli_al.py
